added image with text section

--- a/assets/application.css.liquid
+++ b/assets/application.css.liquid
@@ -4,7 +4,7 @@
 /* ROBOTO */
  @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@100;400;700&display=swap');
 /* POPPINS */
- @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@200;400;600;700&display=swap');
+ @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;400;600&display=swap');
 
 * {
   box-sizing: border-box;
@@ -31,6 +31,7 @@ html {
 
 body {
   font-family: "Poppins", sans-serif;
+  /* font-family: "Roboto", sans-serif; */
   font-size: 1.6rem;
 
   border: 0;
