--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -10,6 +10,9 @@
   <meta name="viewport" content="width=device-width,initial-scale=1,shrink-to-fit=no">
   {{ content_for_header }} <!-- Header hook for plugins -->
   {{ 'application.css' | asset_url | stylesheet_tag }}
+
+  {% comment %} AOS style {% endcomment %}
+  {{ 'aos.css' | asset_url | stylesheet_tag }}
   {% comment %} {{ 'bootstrap.min.css' | asset_url | stylesheet_tag }} {% endcomment %}
 </head>
 <body>
@@ -23,6 +26,14 @@
   {% comment %} {{ 'bootstrap.min.js' | asset_url | script_tag }} {% endcomment %}
   {{ 'application.js' | asset_url | script_tag }}
 
+  {% comment %} AOS script {% endcomment %}
+  {{ 'aos.js' | asset_url | script_tag }}
+
   {% section 'footer' %}
+
+  {% comment %} Initialize Animate On Scroll {% endcomment %}
+  <script>
+    AOS.init();
+  </script>
 </body>
 </html>
